娱乐新闻内容管理

--- a/application/admin/view/news/add.html
+++ b/application/admin/view/news/add.html
@@ -21,7 +21,6 @@
                  {volist name="cats" id="vo"}
                   <option value="{$key}">{$vo}</option>
                   {/volist}
-                  
                 </select>
 				</span> </div>
     </div>
@@ -91,12 +90,12 @@
 {include file="public/_footer" /}
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="__STATIC__/hadmin/lib/jquery.validation/1.14.0/jquery.validate.js"></script>
-<script type="text/javascript" src="__STATIC__/hadmin/lib/jquery.validation/1.14.0/validate-methods.js"></script>
-<script type="text/javascript" src="__STATIC__/hadmin/lib/jquery.validation/1.14.0/messages_zh.js"></script>
-<script type="text/javascript" src="__STATIC__/hadmin/lib/ueditor/1.4.3/ueditor.config.js"></script>
-<script type="text/javascript" src="__STATIC__/hadmin/lib/ueditor/1.4.3/ueditor.all.min.js"> </script>
-<script type="text/javascript" src="__STATIC__/hadmin/lib/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script>
+<script type="text/javascript" src="__STATIC__/h-ui.admin/lib/jquery.validation/1.14.0/jquery.validate.js"></script>
+<script type="text/javascript" src="__STATIC__/h-ui.admin/lib/jquery.validation/1.14.0/validate-methods.js"></script>
+<script type="text/javascript" src="__STATIC__/h-ui.admin/lib/jquery.validation/1.14.0/messages_zh.js"></script>
+<script type="text/javascript" src="__STATIC__/h-ui.admin/lib/ueditor/1.4.3/ueditor.config.js"></script>
+<script type="text/javascript" src="__STATIC__/h-ui.admin/lib/ueditor/1.4.3/ueditor.all.min.js"> </script>
+<script type="text/javascript" src="__STATIC__/h-ui.admin/lib/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script>
 {load href="__STATIC__/admin/uploadify/jquery.uploadify.min.js" /}
 {load href="__STATIC__/admin/js/image.js" /}
 <script type="text/javascript">
