--- a/application/admin/view/public/_meta.html
+++ b/application/admin/view/public/_meta.html
@@ -24,7 +24,7 @@
 <![endif]-->
 <script>
     swf = '__STATIC__/admin/uploadify/uploadify.swf';
-    image_upload_url = "{:url('image/upload')}";
+    image_upload_url = "{:url('image/upload0')}";
 </script>
 </head>
 <body>
